更新 DiFlow-TTS 部分引用

--- a/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
+++ b/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
@@ -12,7 +12,7 @@
   - 05 Van Nguyen
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2509.09631v2)
-  - [Publication]()
+  - [Publication]() submitted to AAAI2026
   - [Github](https://github.com/DiFlow-TTS/DiFlow-TTS)
   - [Demo](https://diflow-tts.github.io)
 - 文件:
@@ -35,17 +35,17 @@ Experimental results demonstrate that ***DiFlow-TTS*** achieves promising perfor
 It also maintains a compact model size and achieves low-latency inference, generating speech up to 25.8 times faster than the latest existing baselines.
 Code and audio samples are available on our [demo page](https://diflow-tts.github.io).
 
-## 1·Introduction
+## 1·引言
 
 Zero-shot TTS has seen significant advancements in recent years, aiming to generate high-quality speech that accurately mimics the voice of previously unseen speakers using only a few seconds of reference, with applications in personalized virtual assistants, accessibility tools for low-resource languages, and content creation.
 Although large-scale generative models have made substantial progress in this area, several challenges remain.
 
-Recent studies have explored the application of language modeling [^Zhang2023Speak], [^Han2024Vall-E], [^Meng2025Autoregressive], [^Song2024Ella-V], [^Chen2024Vall-E], [^Peng2024VoiceCraft], [^Ji2024MobileSpeech], [^Wang2025Spark-TTS], [^Chen2025Neural], particularly through autoregressive (AR) approaches.
-A pioneering work of this is VALL-E [^Chen2025Neural], which represents speech as discrete codec tokens and treats these tokens analogously to text, thus reformulating TTS as a conditional codec language modeling task.
+Recent studies have explored the application of language modeling (**VALL-E X**[^Zhang2023VALL-EX], **VALL-E R**[^Han2024VALL-ER], **MELLE**[^Meng2024MELLE], **ELLA-V**[^Song2024ELLA-V], **VALL-E 2**[^Chen2024VALL-E2], **VoiceCraft**[^Peng2024VoiceCraft], **MobileSpeech**[^Ji2024MobileSpeech], **Spark-TTS**[^Wang2025Spark-TTS], **VALL-E**[^Wang2023VALL-E]), particularly through autoregressive (AR) approaches.
+A pioneering work of this is **VALL-E**[^Wang2023VALL-E], which represents speech as discrete codec tokens and treats these tokens analogously to text, thus reformulating TTS as a conditional codec language modeling task.
 Although such models demonstrate strong performance in terms of speech naturalness and speaker similarity, they typically require training on large-scale datasets to be effective.
 Moreover, their autoregressive nature results in slow inference and introduces common artifacts, such as unintended repetition of content from the reference speech or missing initial words from the input text.
 
-![](figures/overall-model.pdf)
+![](Images/2025.09.11_DiFlow-TTS_Fig.01.png)
 
 <a id="fig:overview">
 Figure.01: Overview of DiLow-TTS.
@@ -56,7 +56,7 @@ A codec decoder reconstructs the final waveform.
 </a>
 
 To overcome these limitations, non-autoregressive (NAR) approaches have been developed, enabling faster generation through parallel decoding.
-Among these, diffusion-based [^Kang2023ZET-Speech], [^Shen2024NaturalSpeech], [^Ju2024NaturalSpeech3], [^Lee2025DiTTo-TTS] and flow-matching-based [^Kim2023P-Flow], [^Le2023Voicebox], [^Mehta2024Matcha-TTS], [^Eskimez2024E2], [^Chen2024F5-TTS] models have emerged as effective generative frameworks for TTS, striking a better balance between synthesis quality and inference efficiency.
+Among these, diffusion-based (**ZET-Speech**[^Kang2023ZET-Speech], **NaturalSpeech2**[^Shen2024NaturalSpeech2], **NaturalSpeech3**[^Ju2024NaturalSpeech3], **DiTTo-TTS**[^Lee2024DiTTo-TTS]) and flow-matching-based (**P-Flow**[^Kim2023P-Flow], **VoiceBox**[^Le2023VoiceBox], **Matcha-TTS**[^Mehta2023Matcha-TTS], **E2-TTS**[^Eskimez2024E2-TTS], **F5-TTS**[^Chen2024F5-TTS]) models have emerged as effective generative frameworks for TTS, striking a better balance between synthesis quality and inference efficiency.
 These models typically operate in the mel-spectrogram domain, which preserves rich acoustic detail and enables in-context learning via target speech prompting, leading to improved speaker similarity.
 To further reduce inference complexity, several works have adopted discrete codec tokens as intermediate representations.
 For example, R-VC [^Zuo2025Rhythm] introduces a shortcut flow matching mechanism that allows generation in a few steps and even one step, significantly reducing inference latency.
@@ -69,7 +69,7 @@ Consequently, the expressiveness and naturalness of synthesized speech are signi
 Based on these observations, we pose the following question: ***Q1: How can we explicitly model factorized speech tokens in a compact and unified framework?***
 
 In particular, recent efforts to adapt discrete codec tokens to generative paradigms have sparked a growing interest in applying diffusion models within fully discrete settings [^Ye2025Emotional], [^Ye2025Shushing!].
-In contrast, flow-matching models have predominantly followed a single strategy: embedding discrete data into a continuous space followed by continuous flow matching [^Du2024Cosyvoice], [^Hieu2025OZS}peech], [^Wang2025Discl-Vc], [^Zuo2025Enhancing].
+In contrast, flow-matching models have predominantly followed a single strategy: embedding discrete data into a continuous space followed by continuous flow matching [^Du2024Cosyvoice2], [^Hieu2025OZS}peech], [^Wang2025Discl-Vc], [^Zuo2025Enhancing].
 Although Discrete Flow Matching (DFM) [^Gat2024Discrete] has emerged as a promising generative paradigm in domains such as language, vision, and bioinformatics [^Shaul2025Flow], [^Yadav2025Retro], [^Fuest2025Maskflow], its application to speech synthesis is still limited.
 This motivates a second question:
 ***Q2: Can purely Discrete Flow Matching achieve state-of-the-art zero-shot TTS performance while maintaining both naturalness and fidelity in synthesized speech?***
@@ -89,26 +89,26 @@ This architecture enables the model to explicitly learn aspect-specific distribu
 - Experimental results demonstrate that ***DiFlow-TTS*** is both compact and efficient in model size, surpassing several strong zero-shot TTS baselines in terms of naturalness, prosody, energy control, and speaker style preservation.
 It also maintains a compact model size and achieves low-latency inference, generating speech up to 25.8 times faster than strong baselines.
 
-## 2·Related Work
+## 2·背景
 
-A growing trend in speech synthesis focuses on converting raw waveforms into discrete token representations using vector-quantized variational autoencoders (VQ-VAE), which was first introduced by [^Oord2017Neural] in the field of computer vision and later adapted to speech synthesis.
+A growing trend in speech synthesis focuses on converting raw waveforms into discrete token representations using **vector-quantized variational autoencoders (VQ-VAE)**, which was first introduced by **VQ-VAE**[^Oord2017Neural] in the field of computer vision and later adapted to speech synthesis.
 These tokenized representations have demonstrated greater naturalness and robustness compared to conventional mel-spectrogram-based approaches.
-To effectively model sequences of discrete speech tokens, recent efforts have adapted large language models (LLMs) from the natural language processing (NLP) domain [^Zhang2023Speak], [^Chen2024Vall-E], [^Han2024Vall-E], [^Du2024Cosyvoice], [^Peng2024VoiceCraft], [^Meng2025Autoregressive], [^Chen2025Neural], [^Wang2025Spark-TTS].
-A notable example is VALL-E [^Chen2025Neural], which leverages a pre-trained neural codec to encode speech into discrete codec tokens and reformulates zero-shot TTS as a conditional codec language modeling task.
+To effectively model sequences of discrete speech tokens, recent efforts have adapted large language models (LLMs) from the natural language processing (NLP) domain (**VALL-E X**[^Zhang2023VALL-EX], **VALL-E 2**[^Chen2024VALL-E2], **VALL-E R**[^Han2024VALL-ER], **CosyVoice2**[^Du2024Cosyvoice2], **VoiceCraft**[^Peng2024VoiceCraft], **MELLE**[^Meng2024MELLE], **VALL-E**[^Wang2023VALL-E], **Spark-TTS**[^Wang2025Spark-TTS]).
+A notable example is **VALL-E**[^Wang2023VALL-E], which leverages a pre-trained neural codec to encode speech into discrete codec tokens and reformulates zero-shot TTS as a conditional codec language modeling task.
 During inference, it performs autoregressive (AR) continuation from the acoustic tokens of a short speech prompt, enabling high-fidelity speaker-consistent voice synthesis.
 
 Although autoregressive models achieve impressive quality, they are inherently limited by slow inference speeds.
-This limitation has prompted a shift toward non-autoregressive (NAR) paradigms [^Shen2024NaturalSpeech], [^Ju2024NaturalSpeech3], [^Du2024UniCATS], [^Lee2025DiTTo-TTS], [^Jia2025DiTAR].
-For example, NaturalSpeech 2 [^Shen2024NaturalSpeech] uses diffusion [^Ho2020Denoising], [^Song2021Score-Based] to generate discrete acoustic tokens as continuous features, and NaturalSpeech 3 [^Ju2024NaturalSpeech3] further factorizes speech into subspaces of content, prosody, and acoustic details, employing multiple diffusion models to independently capture various acoustic characteristics.
+This limitation has prompted a shift toward non-autoregressive (NAR) paradigms (**NaturalSpeech2**[^Shen2024NaturalSpeech2], **NaturalSpeech3**[^Ju2024NaturalSpeech3], [^Du2024UniCATS], **DiTTo-TTS**[^Lee2024DiTTo-TTS], [^Jia2025DiTAR]).
+For example, NaturalSpeech 2 [^Shen2024NaturalSpeech2] uses diffusion [^Ho2020Denoising], [^Song2021Score-Based] to generate discrete acoustic tokens as continuous features, and **NaturalSpeech3**[^Ju2024NaturalSpeech3] further factorizes speech into subspaces of content, prosody, and acoustic details, employing multiple diffusion models to independently capture various acoustic characteristics.
 In parallel, flow matching [^Lipman2023Flow], [^Liu2023Flow] has gained attention as a promising generative technique, producing strong results in various domains.
-However, most existing speech-related flow matching applications operate in a continuous space [^Mehta2024Matcha-TTS], [^Guan2024Reflow-TTS], [^Yao2025Stablevc], [^Zuo2025Rhythm], [^Zuo2025Enhancing], [^Hieu2025OZS}peech], requiring either a pure mel-spectrogram or discrete tokens to be embedded into continuous representations prior to generation.
+However, most existing speech-related flow matching applications operate in a continuous space (**Matcha-TTS**[^Mehta2023Matcha-TTS], [^Guan2024Reflow-TTS], [^Yao2025Stablevc], [^Zuo2025Rhythm], [^Zuo2025Enhancing], [^Hieu2025OZS}peech]), requiring either a pure mel-spectrogram or discrete tokens to be embedded into continuous representations prior to generation.
 This leads to increased computational overhead and latency during inference, which diminishes the efficiency benefits of flow-based approaches.
 An emerging line of research seeks to extend iterative refinement techniques to discrete spaces by modeling generation dynamics using Markov chains.
 Discrete-space generative models have already proven effective in domains such as natural language [^Lou2024Discrete], [^Shi2024Simplified], [^Sahoo2024Simple], proteins [^Campbell2024Generative], [^Yi2025All-Atom], vision [^Austin2021Structured], [^Chang2022MaskGIT], [^Shi2024Simplified], [^Fuest2025Maskflow], code [^Gat2024Discrete], and even graphs [^Qin2025DeFoG].
 Although discrete diffusion models have recently been applied to speech synthesis [^Ye2025Emotional], [^Ye2025Shushing!], the use of discrete flow matching [^Gat2024Discrete] to model speech tokens remains largely unexplored, particularly in zero-shot TTS scenarios.
 In this work, we propose a DFM framework tailored for zero-shot TTS, aiming to harness the efficiency of discrete modeling without compromising quality.
 
-## 3·Method
+## 3·方法
 
 [Fig.02](#fig:components) illustrates the overall framework of ***DiFlow-TTS***, which comprises three main modules: (a) **Speech Tokenization**, (b) **Phoneme-Content Mapper**, and (c) **Factorized Discrete Flow Denoiser**.
 
@@ -124,15 +124,15 @@ The architecture consists of three main components:
 (c) **Factorized Discrete Flow Denoiser**, which performs discrete flow matching conditioned on the content embeddings, speaker embedding, and the discrete prosody and acoustic tokens derived from the reference speech prompt.
 </a>
 
-### Preliminaries
+### 预备知识
 
-#### Notions
+#### 概念
 
 We denote a sequence $x$ as an array of $L$ tokens $(x^1, x^2, \dots, x^L)$ belonging to a discrete space $\mathcal{D} = [v]^L$, where each token is selected from a vocabulary of size $v$, with $[v] = \{1, \dots, v\}$.
 We also define an extended space $\mathcal{D}' = [v]^{nL}$ as the concatenation of $n$ such sequences, each of length $L$.
 To express the distributions of the point mass in these sequences, we use the delta function $\delta_y(x) = \prod_{i=1}^N \delta_{y^i}(x^i)$, where $\delta_{y^i}(x^i) = 1$ if $x^i = y^i$, and $0$ otherwise.
 
-#### Discrete Flow Matching
+#### 离散流匹配
 
 In DFM models, the goal is to transform the source samples $\mathbf{x}_0 \sim p$ to the target samples $\mathbf{x}_1 \sim q$.
 We elaborate on the source and target distributions as well as the probability velocity in the following paragraphs.
@@ -175,10 +175,10 @@ $$
 
 where $p_t(\mathbf{x}_0, \mathbf{x}_1|\mathbf{x}_t, \mathbf{c}; \theta)$ is the posterior distribution $\mathbf{x}_1$ given a partially corrupted sequence $\mathbf{x}_t$ and condition $\mathbf{c}$.
 
-### Speech Tokenization
+### 语音分词化
 
 The *Speech Tokenization* module converts a raw input speech waveform into discrete token sequences.
-In our framework, we employ FaCodec [^Ju2024NaturalSpeech3] as the speech tokenizer and speaker embedding extractor.
+In our framework, we employ **FACodec**[^Ju2024NaturalSpeech3] as the speech tokenizer and speaker embedding extractor.
 FaCodec factorizes the original speech signal $\mathcal{A}$ into distinct components representing prosody, content, acoustic details, and speaker identity:
 
 $$
@@ -189,10 +189,10 @@ $$
 where $\mathbf{x}^p \in [v]^{mL}$, $\mathbf{x}^c \in [v]^{nL}$, and $\mathbf{x}^a \in [v]^{kL}$ denote the discrete token sequences for prosody, content, and acoustic details, respectively, and $\mathbf{s} \in \mathbb{R}^{D_{\text{spk}}}$ is the embedding of the speaker.
 Here, $m$, $n$, and $k$ represent the number of quantizers used for each attribute, $L$ denotes the temporal length of the sequences, and $v$ is the vocabulary size.
 
-### Phoneme-Content Mapper
+### 音素-内容映射器
 
 The *Phoneme-Content Mapper* (PCM) aligns and transforms the phonemes derived from the text prompt into the corresponding content tokens generated by the speech tokenizer, along with the corresponding embeddings of the content.
-Given a transcript text, we first use an open-source grapheme-to-phoneme converter\footnote{\url{https://github.com/Kyubyong/g2p/tree/master}} to obtain the textual phoneme sequence $\mathbf{P} = (\mathbf{P}_1, \mathbf{P}_2, \dots, \mathbf{P}_N)$ with $N$ phoneme tokens.
+Given a transcript text, we first use an [open-source grapheme-to-phoneme converter](https://github.com/Kyubyong/g2p/tree/master) to obtain the textual phoneme sequence $\mathbf{P} = (\mathbf{P}_1, \mathbf{P}_2, \dots, \mathbf{P}_N)$ with $N$ phoneme tokens.
 A phoneme encoder then processes $\mathbf{P}$ into a sequence of $N$ phoneme embeddings $\mathbf{p} = (\mathbf{p}_1, \mathbf{p}_2, \dots, \mathbf{p}_N) \in \mathbb{R}^{N \times D'}$.
 
 To align phonemes with discrete content speech tokens, we employ a Duration Predictor that estimates the duration $\mathbf{d} = (\mathbf{d}_1, \mathbf{d}_2, \dots, \mathbf{d}_N)$ (i.e., the number of aligned speech tokens) for each phoneme.
@@ -218,12 +218,12 @@ $$
 
 where $v$ is the vocabulary size for the discrete content tokens, and $D$ is the hidden dimension of the content embeddings.
 
-### Factorized Discrete Flow Denoiser
+### 分解式离散流去噪器
 
 The *Factorized Discrete Flow Denoiser (FDFD)* aims to generate the prosody and acoustic sequences of the target speech by leveraging Discrete Flow Matching and in-context learning, conditioned on a set of contextual inputs.
 In the following, we detail the key elements of this module.
 
-#### Contextual Modeling.
+#### 上下文建模
 
 We now elaborate on the construction of the conditioning context $\mathbf{c}$ introduced in Eq.~\eqref{eq:u_t_denoiser} and describe how it is integrated into our framework.
 
@@ -280,9 +280,9 @@ $$
 \tag{5}
 $$
 
-#### Factorized Flow Prediction
+#### 分解流预测
 
-Inspired by the Multi-head Attention mechanism [^Vaswani2017Attention], which enables the model to jointly attend to information from different representation subspaces, we propose a factorized flow prediction mechanism based on multi-head prediction.
+Inspired by the Multi-head Attention mechanism [^Vaswani2017Transformer], which enables the model to jointly attend to information from different representation subspaces, we propose a factorized flow prediction mechanism based on multi-head prediction.
 In this design, FDFD simultaneously models multiple aspects of speech, specifically prosody and acoustic details.
 Formally, we define two parallel heads: the *prosody head* $f_{\phi}(\cdot)$ and the *acoustic head* $f_{\omega}(\cdot)$, which independently predict probability distributions corresponding to prosody and acoustic attributes.
 We begin by slicing the representation $\mathbf{h}_{p,a}$ obtained from Eq~\eqref{eq:h_pa} into two parts: the prosody representation $\mathbf{h}_p \in \mathbb{R}^{m \times L \times D}$ and the acoustic representation $\mathbf{h}_a \in \mathbb{R}^{k \times L \times D}$.
@@ -291,12 +291,12 @@ These logits correspond to the categorical distributions predicted over the disc
 Finally, the two outputs are concatenated along the dimension of the quantizer, producing a unified tensor of shape $\mathbb{R}^{(m+k) \times L \times v}$.
 This tensor serves as the estimated posterior distribution over $\mathbf{x}_1$, as defined in Eq.~\eqref{eq:p1|t}.
 
-#### Overall Factorized Discrete Flow Denoiser
+#### 整体模型
 
 We define the overall model $f_{\theta}$ as a composition of three main components: a *neural network* $f_{\psi}$, a *prosody head* $f_{\phi}$, and an *acoustic head* $f_{\omega}$.
 Formally, the model can be expressed as $f_{\theta} = (f_{\phi} \oplus f_{\omega}) \circ f_{\psi}$, where $\circ$ denotes composition.
 
-### Training Objectives
+### 训练目标
 
 The overall training objective consists of three loss components corresponding to different modules in our framework.
 First, we optimize the *Duration Predictor* using a loss of the Mean Squared Error (MSE) on a logarithmic scale, denoted as $\mathcal{L}_{dur}$, which compares the predicted and ground-truth durations.
@@ -318,17 +318,15 @@ $$
 
 where $\lambda_{dur}$, $\lambda_c$, and $\lambda_{FDFD}$ are hyperparameters that control the relative importance of each loss term.
 
-## 4·Experiments
+## 4·实验
 
-### Experimental Setup
-
-#### Dataset
+### 数据集
 
 We use the *LibriTTS* dataset [^Zen2019LibriTTS], which contains multi-speaker English audio recordings, for training purposes.
 For evaluation, we utilize the *LibriSpeech test-clean* dataset [^Panayotov2015Librispeech].
 Additional details are provided in the *Dataset Details* section of the Supplementary Material.
 
-#### Evaluation Metrics
+### 评价指标
 
 To evaluate model performance, we use a range of *objective evaluation metrics* targeting various aspects: naturalness and speech quality is measured with UTMOS; speaker similarity is evaluated using SIM-O and SIM-R; robustness is reflected by the word error rate (WER); and prosody accuracy and error are analyzed through pitch and energy metrics.
 In addition, we assess model latency using the real-time factor (RTF).
@@ -336,14 +334,14 @@ More information on these metrics is available in the *Metrics Details* section 
 To complement these objective evaluations, we perform a *subjective assessment* based on the Mean Opinion Score (MOS) protocol.
 In this evaluation, 30 listeners rate synthesized utterances on a scale from 1 to 5 based on naturalness, intelligibility, and speaker similarity to the reference prompt.
 
-#### Implementation Details & Baselines
+### 模型实现与基线
 
 Please refer to the *Implementation Details* section of the Supplementary Material for a comprehensive description.
 Additionally, we compare our model with previous zero-shot TTS baselines, with further information provided in the *Baselines Details* section of the Supplementary Material.
 
-### Main Results
+## 4.结果
 
-#### Comparison Results.
+### 对比结果
 
 Table~[tab:overall-results-3s](#tab:overall-results-3s) presents the performance of ***DiFlow-TTS*** with 128 function evaluations (NFE) using 3-second audio prompts, compared to baseline methods.
 DiFlow-TTS, along with OZSpeech, achieves state-of-the-art (SOTA) performance in terms of WER, demonstrating the effectiveness of our PCM in preserving the linguistic content of synthesized speech.
@@ -359,7 +357,7 @@ These results are consistent with the findings in Table~[tab:overall-results-3s]
 Overall, ***DiFlow-TTS*** consistently ranks as the second-best model across all MOS dimensions, providing strong evidence of its well-balanced performance in generating natural and intelligible speech with high speaker similarity.
 These results are particularly notable given the model's data efficiency during training.
 
-#### Model Size & Latency Analysis.
+### 模型尺寸与延迟分析
 
 Table~[tab:latency-results](#tab:latency-results) compares the model size and latency between ***DiFlow-TTS*** and the baseline systems for a 3-second audio prompt.
 ***DiFlow-TTS*** achieves a RTF of 0.066 and a model size of 164M parameters with 16 NFE, ranking second in both speed and size.
@@ -367,9 +365,9 @@ In comparison, OZSpeech, with only 1 NFE, is marginally faster (by 0.04s) and sl
 Compared to other baselines, ***DiFlow-TTS*** is 3.9$\times$ to 25.8$\times$ faster in terms of RTF and 2$\times$ to 5.1$\times$ smaller in model size, while still maintaining competitive performance in speech naturalness, intelligibility, and pronunciation accuracy.
 These results demonstrate that ***DiFlow-TTS*** strikes a strong balance between speed, compactness, and the quality of the speech.
 
-### Ablation Study
+### 消融实验
 
-#### Effect of Each Component
+#### 单个组件的影响
 
 To assess the impact of each component in ***DiFlow-TTS***, we perform an ablation study by systematically removing or modifying key elements:
 (1) removing the attribute-type embeddings used to distinguish prosody, content, and acoustic streams;
@@ -385,7 +383,7 @@ When content embeddings from the PCM branch are removed from FDFD, we observe su
 This demonstrates the critical role of content embeddings in conditioning FDFD to generate appropriate prosody and support speaker adaptation.
 Lastly, replacing the multi-head prediction mechanism with a single-head alternative leads to minor performance drops across all metrics, indicating that the multi-head design enhances prediction diversity and robustness in prosody and acoustic modeling.
 
-#### Effect of NFE
+#### NFE 的影响
 
 We investigate the impact of varying NFE from 1 to 128 on ***DiFlow-TTS*** performance to explore the trade-off between inference efficiency and synthesis quality, as presented in Table~[tab:ablation_nfe](#tab:ablation_nfe).
 Although increasing NFE yields only marginal improvements in WER and speaker similarity, it significantly enhances UTMOS scores, indicating that the FDFD module benefits from additional refinement steps to generate more natural speech.
@@ -405,29 +403,29 @@ Future work includes enabling multilingual and emotional synthesis and integrati
 
 ## 参考文献
 
-[^Zhang2023Speak]: Speak Foreign Languages With Your Own Voice: Cross-Lingual Neural Codec Language Modeling. arXiv:2303.03926.
-[^Han2024Vall-E]: VALL-E R: Robust and Efficient Zero-Shot Text-to-Speech Synthesis via Monotonic Alignment. arXiv:2406.07855.
-[^Meng2025Autoregressive]: Autoregressive Speech Synthesis Without Vector Quantization. Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers) 2025.
-[^Song2024Ella-V]: ELLA-V: Stable Neural Codec Language Modeling With Alignment-Guided Sequence Reordering.
-[^Chen2024Vall-E]: VALL-E 2: Neural Codec Language Models Are Human Parity Zero-Shot Text to Speech Synthesizers.
-[^Peng2024VoiceCraft]: VoiceCraft: Zero-Shot Speech Editing and Text-to-Speech in the Wild. Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers) 2024.
-[^Ji2024MobileSpeech]: MobileSpeech: A Fast and High-Fidelity Framework for Mobile Zero-Shot Text-to-Speech. Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers) 2024.
-[^Wang2025Spark-Tts]: Spark-Tts: An Efficient LLM-Based Text-to-Speech Model With Single-Stream Decoupled Speech Tokens. arXiv:2503.01710.
-[^Chen2025Neural]: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers. IEEE Transactions on Audio, Speech and Language Processing 2025.
-[^Kang2023ZET-Speech]: ZET-Speech: Zero-Shot Adaptive Emotion-Controllable Text-to-Speech Synthesis With Diffusion and Style-Based Models. Interspeech 2023 2023.
-[^Shen2024NaturalSpeech]: NaturalSpeech 2: Latent Diffusion Models Are Natural and Zero-Shot Speech and Singing Synthesizers. The Twelfth International Conference on Learning Representations 2024.
-[^Ju2024NaturalSpeech3]: NaturalSpeech3: Zero-Shot Speech Synthesis With Factorized Codec and Diffusion Models. Proceedings of the 41st International Conference on Machine Learning 2024.
-[^Lee2025DiTTo-TTS]: DiTTo-TTS: Diffusion Transformers for Scalable Text-to-Speech Without Domain-Specific Factors. The Thirteenth International Conference on Learning Representations 2025.
-[^Kim2023P-Flow]: P-Flow: A Fast and Data-Efficient Zero-Shot {TTS} Through Speech Prompting. Thirty-Seventh Conference on Neural Information Processing Systems 2023.
-[^Le2023Voicebox]: Voicebox: Text-Guided Multilingual Universal Speech Generation at Scale. Thirty-Seventh Conference on Neural Information Processing Systems 2023.
-[^Mehta2024Matcha-Tts]: Matcha-Tts: A Fast TTS Architecture With Conditional Flow Matching. ICASSP 2024 - 2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
-[^Eskimez2024E2]: E2 Tts: Embarrassingly Easy Fully Non-Autoregressive Zero-Shot TTS. 2024 IEEE Spoken Language Technology Workshop (SLT) 2024.
-[^Chen2024F5-Tts]: F5-Tts: A Fairytaler That Fakes Fluent and Faithful Speech With Flow Matching.
+[^Zhang2023VALL-EX]: [**VALL-E X**: Speak Foreign Languages with Your Own Voice: Cross-Lingual Neural Codec Language Modeling](../SpeechLM/ST2S/2023.03.07_VALL-E_X.md). ArXiv:2303.03926.
+[^Han2024VALL-ER]: [**VALL-E R**: Robust and Efficient Zero-Shot Text-to-Speech Synthesis via Monotonic Alignment](../SpeechLM_TTS/2024.06.12_VALL-E_R.md). ArXiv:2406.07855.
+[^Meng2024MELLE]: [**MELLE**: Autoregressive Speech Synthesis without Vector Quantization](../SpeechLM_TTS/2024.07.11_MELLE.md). ArXiv:2407.08551v2.
+[^Song2024ELLA-V]: [**ELLA-V**: Stable Neural Codec Language Modeling with Alignment-Guided Sequence Reordering](../SpeechLM_TTS/2024.01.14_ELLA-V.md). ArXiv:2401.07333v1.
+[^Chen2024VALL-E2]: [**VALL-E 2**: Neural Codec Language Models are Human Parity Zero-Shot Text to Speech Synthesizers](../SpeechLM_TTS/2024.06.08_VALL-E_2.md). ArXiv:2406.05370v2.
+[^Peng2024VoiceCraft]: [**VoiceCraft**: Zero-Shot Speech Editing and Text-to-Speech in the Wild](../SpeechLM_TTS/2024.03.25_VoiceCraft.md). ArXiv:2403.16973v3/ACL2024.
+[^Ji2024MobileSpeech]: [**MobileSpeech**: A Fast and High-Fidelity Framework for Mobile Zero-Shot Text-to-Speech](../SpeechLM/2024.02.14_MobileSpeech.md). ArXiv:2402.09378v2/ACL2024.
+[^Wang2025Spark-TTS]: [**Spark-TTS**: An Efficient LLM-Based Text-to-Speech Model with Single-Stream Decoupled Speech Tokens](../SpeechLM_TTS/2025.03.03_Spark-TTS.md). ArXiv:2503.01710v1.
+[^Wang2023VALL-E]: [**VALL-E**: Neural Codec Language Models are Zero-Shot Text to Speech Synthesizers](../SpeechLM/ST2S/2023.01.05_VALL-E.md). ArXiv:2301.02111/TASLP2025.
+[^Kang2023ZET-Speech]: [**ZET-Speech**: Zero-Shot Adaptive Emotion-Controllable Text-to-Speech Synthesis with Diffusion and Style-based Models](../Diffusion/2023.05.23_ZET-Speech.md). ArXiv:2305.13831v1/InterSpeech2023.
+[^Shen2024NaturalSpeech2]: [**NaturalSpeech2**: Latent Diffusion Models are Natural and Zero-Shot Speech and Singing Synthesizers](../Diffusion/2023.04.18_NaturalSpeech2.md). ArXiv:2304.09116v3/ICLR2024.
+[^Ju2024NaturalSpeech3]: [**NaturalSpeech3/FACodec**: Zero-Shot Speech Synthesis with Factorized Codec and Diffusion Models](../Diffusion/2024.03.05_NaturalSpeech3.md). ArXiv:2403.03100v3/ICML2024.
+[^Lee2024DiTTo-TTS]: [**DiTTo-TTS**: Diffusion Transformers for Scalable Text-to-Speech without Domain-Specific Factors](2024.06.17_DiTTo-TTS.md). ArXiv:2406.11427v2/ICLR2025Poster.
+[^Kim2023P-Flow]: [**P-Flow**: A Fast and Data-Efficient Zero-Shot TTS through Speech Prompting](2023.09.22_P-Flow.md). NeurIPS2023.
+[^Le2023VoiceBox]: [**VoiceBox**: Text-Guided Multilingual Universal Speech Generation at Scale](2023.06.23_Voicebox.md). ArXiv:2306.15687/NeurIPS2023Poster.
+[^Mehta2023Matcha-TTS]: [**Matcha-TTS**: A Fast TTS Architecture with Conditional Flow Matching](2023.09.06_Matcha-TTS.md). ArXiv:2309.03199v2/ICASSP2024.
+[^Eskimez2024E2-TTS]: [**E2 TTS**: Embarrassingly Easy Fully Non-Autoregressive Zero-Shot TTS](2024.06.26_E2_TTS.md). ArXiv:2406.18009v2/SLT2024.
+[^Chen2024F5-TTS]: [**F5-TTS**: A Fairytaler that Fakes Fluent and Faithful Speech with Flow Matching](2024.10.09_F5-TTS.md). ArXiv:2410.06885v3.
 [^Zuo2025Rhythm]: Rhythm Controllable and Efficient Zero-Shot Voice Conversion via Shortcut Flow Matching. Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers) 2025.
 [^Hieu2025OZSpeech]: OZSpeech: One-Step Zero-Shot Speech Synthesis With Learned-Prior-Conditioned Flow Matching. Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers) 2025.
 [^Ye2025Emotional]: Emotional Face-to-Speech. Forty-Second International Conference on Machine Learning 2025.
 [^Ye2025Shushing!]: Shushing! Let's Imagine an Authentic Speech From the Silent Video. arXiv:2503.14928.
-[^Du2024Cosyvoice]: Cosyvoice 2: Scalable Streaming Speech Synthesis With Large Language Models. arXiv:2412.10117.
+[^Du2024Cosyvoice2]: Cosyvoice 2: Scalable Streaming Speech Synthesis With Large Language Models. arXiv:2412.10117.
 [^Wang2025Discl-Vc]: Discl-Vc: Disentangled Discrete Tokens and in-Context Learning for Controllable Zero-Shot Voice Conversion. arXiv:2505.24291.
 [^Zuo2025Enhancing]: Enhancing Expressive Voice Conversion With Discrete Pitch-Conditioned Flow Matching Model. ICASSP 2025-2025 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2025.
 [^Gat2024Discrete]: Discrete Flow Matching. Advances in Neural Information Processing Systems 2024.
@@ -452,6 +450,6 @@ Future work includes enabling multilingual and emotional synthesis and integrati
 [^Chang2022MaskGIT]: MaskGIT: Masked Generative Image Transformer. The IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 2022.
 [^Qin2025DeFoG]: DeFoG: Discrete Flow Matching for Graph Generation. Proceedings of the 42nd International Conference on Machine Learning (ICML) 2025.
 [^Peebles2023Scalable]: Scalable Diffusion Models With Transformers. Proceedings of the IEEE/CVF International Conference on Computer Vision 2023.
-[^Vaswani2017Attention]: Attention Is All You Need. Advances in Neural Information Processing Systems 2017.
+[^Vaswani2017Transformer]: [**Transformer**: Attention Is All You Need](../_Basis/2017.06.12_Transformer.md). ArXiv:1706.03762/NeurIPS2017.
 [^Zen2019LibriTTS]: LibriTTS: A Corpus Derived From LibriSpeech for Text-to-Speech. Interspeech 2019 2019.
 [^Panayotov2015Librispeech]: Librispeech: An ASR Corpus Based on Public Domain Audio Books. 2015 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2015.
