更新 DiFlow-TTS 摘要

--- a/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
+++ b/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
@@ -1,4 +1,4 @@
-# DiFlow-TTS: Discrete Flow Matching With Factorized Speech Tokens for Low-Latency Zero-Shot Text-to-Speech
+# DiFlow-TTS
 
 <details>
 <summary>基本信息</summary>
@@ -24,6 +24,7 @@
 
 ## 摘要
 
+<!--
 Zero-shot Text-to-Speech (TTS) aims to synthesize high-quality speech that mimics the voice of an unseen speaker using only a short reference sample, requiring not only speaker adaptation but also accurate modeling of prosodic attributes.
 Recent approaches based on language models, diffusion, and flow matching have shown promising results in zero-shot TTS, but still suffer from slow inference and repetition artifacts.
 Discrete codec representations have been widely adopted for speech synthesis, and recent works have begun to explore diffusion models in purely discrete settings, suggesting the potential of discrete generative modeling for speech synthesis.
@@ -34,6 +35,20 @@ In addition, the model employs a factorized flow prediction mechanism with disti
 Experimental results demonstrate that ***DiFlow-TTS*** achieves promising performance in several key metrics, including naturalness, prosody, preservation of speaker style, and energy control.
 It also maintains a compact model size and achieves low-latency inference, generating speech up to 25.8 times faster than the latest existing baselines.
 Code and audio samples are available on our [demo page](https://diflow-tts.github.io).
+-->
+零样本文本转语音旨在使用很短的参考样本模仿未见说话人的声音以合成高质量语音, 不需要说话人适应和对韵律属性的精确建模.
+近期基于语言模型, 扩散模型和流匹配的方法在零样本文本转语音方面展示了良好的结果, 但仍然受限于推理速度慢和重复伪影.
+
+离散编解码器表示被广泛用于语音合成, 且近期工作开始探索扩散模型在纯离散设置下的应用, 表明了离散生成建模在语音合成方面的潜力.
+但是, 现有的流匹配方法通常将这些离散 Token 嵌入到连续空间中并使用连续流匹配, 这可能无法完全利用离散表示的优势.
+
+为了解决这些挑战, 我们提出了 ***DiFlow-TTS***, 这是我们所知的第一个探索用于语音合成的纯**离散流匹配 (Discrete Flow Matching)** 模型, 它在一个紧凑且统一的架构中显式地建模了分解的语音属性.
+它通过在文本内容上条件化以实现上下文学习, 并从参考语音中提取韵律和声学属性, 从而在零样本设置下有效地克隆属性.
+此外, 模型采用了分解流预测机制 (Factorized Flow Prediction) 使用不同的头分支处理韵律和声学细节, 允许它学习具体方面的分布.
+
+实验结果表明 ***DiFlow-TTS*** 在多个关键指标上都取得了良好的性能, 包括自然度, 韵律, 保存说话人的风格, 和能量控制.
+它还保持了模型的紧凑大小, 并实现了低延迟推理, 相比最新基线生成语音速度提高了 25.8 倍.
+代码和音频示例可在我们的[演示页面](https://diflow-tts.github.io)上获得.
 
 ## 1·引言
 
